--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ canvas {
 }
 
 .upload{
+  font-family: Arial, sans-serif;
   font-weight: 100;
   background-color: transparent;
   border: 2px solid yellow;
